--- a/src/client/styles/app.scss
+++ b/src/client/styles/app.scss
@@ -2,18 +2,36 @@
 
 // Colors
 // $body-bg: #0091ea;        // Bright Blue
-$primary: #ff6ad5;        // Neon Pink
-$secondary: #ffdb58;      // Bright Yellow
-$success: #00f764;        // Neon Green
-$info: #01cdfe;           // Bright Cyan
-$warning: #ff61a6;        // Pinkish
-$danger: #ff2965;         // Neon Red
-$light: #9A83D4;          // Pastel Purple
-$dark: #260e37;           // Dark Blueish Purple
+$primary: #ff6ad5; // Neon Pink
+$secondary: #ffdb58; // Bright Yellow
+$success: #00f764; // Neon Green
+$info: #01cdfe; // Bright Cyan
+$warning: #ff61a6; // Pinkish
+$danger: #ff2965; // Neon Red
+$light: #9a83d4; // Pastel Purple
+$dark: #260e37; // Dark Blueish Purple
 
 // Link Colors
-$link-color: #01cdfe;     // Bright Cyan
+$link-color: #01cdfe; // Bright Cyan
 $link-hover-color: darken($link-color, 10%);
 
 // Bootstrap Import
 @import '~bootstrap/scss/bootstrap.scss';
+
+html,
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+#app {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.content {
+	flex: 1;
+	padding: 1rem;
+}
